--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,5 @@
 files:
   - source: /docs/**/*
-    translation: >-
-      /i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/**/%original_file_name%
-  - source: /i18n/en/**/*
-    translation: /i18n/%two_letters_code%/**/%original_file_name%
+    translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/**/%original_file_name%
+  - source: /i18n/**/docusaurus-plugin-content-docs/*.json
+    translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/%original_file_name%
