--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,3 +3,5 @@ files:
     translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/**/%original_file_name%
   - source: /i18n/**/docusaurus-plugin-content-docs/*.json
     translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/%original_file_name%
+  - source: /versioned_docs/**/*
+    translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/**/%original_file_name%
