--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,9 +1,9 @@
 files:
   - source: /docs/**/*
     translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/**/%original_file_name%
-  - source: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/*.json
+  - source: /i18n/en/docusaurus-plugin-content-docs/*.json
     translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/%original_file_name%
   - source: /versioned_docs/**/*
     translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/**/%original_file_name%
-  - source: /i18n/%two_letters_code%/docusaurus-theme-classic/*.json
+  - source: /i18n/en/docusaurus-theme-classic/*.json
     translation: /i18n/%two_letters_code%/docusaurus-theme-classic/%original_file_name%
