--- a/crowdin.yml
+++ b/crowdin.yml
@@ -7,3 +7,5 @@ files:
     translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/**/%original_file_name%
   - source: /i18n/en/docusaurus-theme-classic/*.json
     translation: /i18n/%two_letters_code%/docusaurus-theme-classic/%original_file_name%
+  - source: /i18n/en/*.json
+    translation: /i18n/%two_letters_code%/%original_file_name%
